--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,7 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
+.DS_Store
+node_modules
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
+backend/service-account.json
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+project
+project.zip
